# vayu-pipeline-copilot

./: .gitignore  README.md  docker-compose.yml
adk_agent/: Dockerfile  README.md  example_usage.py  requirements.txt  run_agent.py
adk_agent/vayu_agent/: agent.py
airflow-mcp/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  http_utils.py  requirements.txt  server.py
airflow-mcp/schema/: __init__.py
airflow-mcp/schema/commons/: cron_expression.json  params.json  tag.json  time_delta.json
airflow-mcp/schema/dag/: dag.json  dag_collection.json  dag_run.json  dag_run_collection.json  dag_source.json  schedule_interval.json  task_instance.json  task_instance_collection.json  task_instance_log.json  task_instance_tries.json  task_instance_try_details.json
airflow-mcp/schema/monitor/: health.json
airflow-mcp/tools/: dag.py  monitor.py  registry.py  task_instance.py
airflow_home/: requirements.txt
airflow_home/dags/: error_sample_dag.py  sample_dag.py
copilot_agents/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
copilot_agents/src/agent/: dag_manager.py  graph.py
langgraph_agent/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
langgraph_agent/src/agent/: dag_manager.py  graph.py
